--- a/recipes/cornbread.html
+++ b/recipes/cornbread.html
@@ -17,14 +17,22 @@
         </p>
         <h2>Ingredients</h2>
         <ul>
-            <li>3 cups crumbled cornbread</li>
-            <li>2 tablespoons butter</li>
-            <li>1 small onion, diced</li>
-            <li>1/2 cup chopped celery</li>
-            <li>2 large eggs, beaten</li>
-            <li>2 cups chicken stock</li>
-            <li>1 tablespoon dried sage, or to taste</li>
-            
+                <li>3 cups crumbled cornbread</li>
+                <li>2 tablespoons butter</li>
+                <li>1 small onion, diced</li>
+                <li>1/2 cup chopped celery</li>
+                <li>2 large eggs, beaten</li>
+                <li>2 cups chicken stock</li>
+                <li>1 tablespoon dried sage, or to taste</li>
+                <li>salt and ground black pepper to taste</li>
         </ul>
+        <ol>
+                <li>Gather all ingredients.</li>
+                <li>Preheat the oven to 350 degrees F (175 degrees C). Grease a 7x11-inch baking dish. Place crumbled cornbread in a large bowl.</li>
+                <li>Melt butter in a large skillet over medium heat. Add onion and celery and sauté until soft, 5 to 7 minutes.</li>
+                <li>Add sautéed onion and celery to the crumbled cornbread. Stir in chicken stock, eggs, sage, salt, and pepper until well combined. Pour dressing into the prepared baking dish.</li>
+                <li>Bake in the preheated oven until dressing just starts to turn golden brown around the edges, about 30 minutes.</li>
+                <li>Serve and enjoy!</li>
+        </ol>
 </body>
 </html>
