Add heading and indention
There was no steps heading and also code looked awful with single indention

--- a/recipes/cornbread.html
+++ b/recipes/cornbread.html
@@ -26,6 +26,7 @@
                 <li>1 tablespoon dried sage, or to taste</li>
                 <li>salt and ground black pepper to taste</li>
         </ul>
+        <h2>Steps</h2>
         <ol>
                 <li>Gather all ingredients.</li>
                 <li>Preheat the oven to 350 degrees F (175 degrees C). Grease a 7x11-inch baking dish. Place crumbled cornbread in a large bowl.</li>
