--- a/recipes/mashedpotato.html
+++ b/recipes/mashedpotato.html
@@ -8,22 +8,23 @@
 <body>
     <h1>Chef John's Perfect Mashed Potatoes</h1>
     <p>
-        Chef John’s Perfect Mashed Potatoes are known for their ultra-smooth, creamy texture and rich, buttery flavor. He starts by simmering Yukon Gold potatoes until tender, then dries them briefly to remove excess moisture. The potatoes are passed through a ricer for a light, lump-free consistency, and slowly mixed with hot milk, butter, and seasoning to create a silky mash that’s both simple and luxurious.
+            Chef John’s Perfect Mashed Potatoes are known for their ultra-smooth, creamy texture and rich, buttery flavor. He starts by simmering Yukon Gold potatoes until tender, then dries them briefly to remove excess moisture. The potatoes are passed through a ricer for a light, lump-free consistency, and slowly mixed with hot milk, butter, and seasoning to create a silky mash that’s both simple and luxurious.
     </p>
     <h2>Ingredients</h2>
     <ul>
-        <li>3 large russet potatoes, peeled and halved lengthwise</li>
-        <li>1/2 cup whole milk</li>
-        <li>1/4 cup butter</li>
-        <li>salt and ground black pepper to taste</li>
+            <li>3 large russet potatoes, peeled and halved lengthwise</li>
+            <li>1/2 cup whole milk</li>
+            <li>1/4 cup butter</li>
+            <li>salt and ground black pepper to taste</li>
     </ul>
+    <h2>Steps</h2>
     <ol>
-        <li>Gather all ingredients.</li>
-        <li>Gather all ingredients.</li>
-        <li>Drain potatoes, then return to the pot. Turn heat to high and allow potatoes to dry for about 30 seconds. Turn off heat.</li>
-        <li>Mash potatoes with a potato masher twice around the pot, then mash in milk and butter until smooth and fluffy.</li>
-        <li>Season with salt and black; whisk until evenly distributed, about 15 seconds.</li>
-        <li>Serve and enjoy!</li>
+            <li>Gather all ingredients.</li>
+            <li>Gather all ingredients.</li>
+            <li>Drain potatoes, then return to the pot. Turn heat to high and allow potatoes to dry for about 30 seconds. Turn off heat.</li>
+            <li>Mash potatoes with a potato masher twice around the pot, then mash in milk and butter until smooth and fluffy.</li>
+            <li>Season with salt and black; whisk until evenly distributed, about 15 seconds.</li>
+            <li>Serve and enjoy!</li>
     </ol>
     
 </body>
