--- a/recipes/sweetpotato.html
+++ b/recipes/sweetpotato.html
@@ -24,16 +24,17 @@
                     <li>Cinnamon: Just a pinch of cinnamon adds warmth and brings out the other flavors.</li>
                     <li>Marshmallows: Of course, you'll need a bag of miniature marshmallows (they'll be the star of the show, after all).</li>
             </ul>
+            <h2>Steps</h2>
             <ol>
-                <li>
-                        Cook and mash the sweet potatoes: Place the peeled and cubed sweet potatoes in a saucepan and cover with water. Cook over medium-high heat until tender, then drain and mash with a potato masher.
-                </li>
-                <li>
-                        Mix and top the casserole: Use an electric mixer to mix the mashed (and cooled) sweet potatoes, brown sugar, margarine, cinnamon, and orange juice. Pour the mixture into a baking dish. Top with marshmallows.
-                </li>
-                <li>
-                        Bake the casserole: Bake in a preheated oven until the marshmallows are puffed and lightly browned, about half an hour.
-                </li>
+                    <li>
+                            Cook and mash the sweet potatoes: Place the peeled and cubed sweet potatoes in a saucepan and cover with water. Cook over medium-high heat until tender, then drain and mash with a potato masher.
+                    </li>
+                    <li>
+                            Mix and top the casserole: Use an electric mixer to mix the mashed (and cooled) sweet potatoes, brown sugar, margarine, cinnamon, and orange juice. Pour the mixture into a baking dish. Top with marshmallows.
+                    </li>
+                    <li>
+                            Bake the casserole: Bake in a preheated oven until the marshmallows are puffed and lightly browned, about half an hour.
+                    </li>
             </ol>
 
 
