Add anchor links to other html files

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <p><a href="recipes/cornbread.html">Grandma's Corn Bread Dressing</a></p>
+    <p><a href="recipes/mashedpotato.html">Chef John's Perfect Mashed Potatoes</a></p>
+    <p><a href="recipes/sweetpotato.html">Sweet Potato Casserole with Marshmallows</a></p>
 </body>
 </html>
