--- a/recipes/mashedpotato.html
+++ b/recipes/mashedpotato.html
@@ -6,6 +6,8 @@
     <title>Chef John's Perfect Mashed Potatoes</title>
 </head>
 <body>
+    <p><a href="../index.html">Home</a></p>
+
     <h1>Chef John's Perfect Mashed Potatoes</h1>
     <p>
             Chef John’s Perfect Mashed Potatoes are known for their ultra-smooth, creamy texture and rich, buttery flavor. He starts by simmering Yukon Gold potatoes until tender, then dries them briefly to remove excess moisture. The potatoes are passed through a ricer for a light, lump-free consistency, and slowly mixed with hot milk, butter, and seasoning to create a silky mash that’s both simple and luxurious.
