Add style to Index

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <p><a href="recipes/cornbread.html">Grandma's Corn Bread Dressing</a></p>
-    <p><a href="recipes/mashedpotato.html">Chef John's Perfect Mashed Potatoes</a></p>
-    <p><a href="recipes/sweetpotato.html">Sweet Potato Casserole with Marshmallows</a></p>
+    <div class="container">
+        <h1 class="title">Odin Recipes</h1>
+        <p><a href="recipes/cornbread.html">Grandma's Corn Bread Dressing</a></p>
+        <p><a href="recipes/mashedpotato.html">Chef John's Perfect Mashed Potatoes</a></p>
+        <p><a href="recipes/sweetpotato.html">Sweet Potato Casserole with Marshmallows</a></p>
+    </div>
 </body>
 </html>
