Add lacking html elements and css
two htmls had no images and/or description so it is inconsistent to the first file. Also added recipes.css

--- a/recipes/sweetpotato.html
+++ b/recipes/sweetpotato.html
@@ -8,6 +8,7 @@
 <body>
             <p><a href="../index.html">Home</a></p>
             <h1>Sweet Potato Casserole with Marshmallows</h1>
+            <img src="https://www.allrecipes.com/thmb/K1e-tN7W_LXwj5fDq_fDkdiZdBg=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-recipe-13478-sweet-potato-casserole-ii-hero-04-VAT-4x3-49aaf773eaf34dbeb9be808ad74d41eb.jpg" alt="Picture of sweet potato Cassero with Marshmallows">
             <h2>Description</h2>
             <p>
                 This sweet potato casserole with marshmallows toes the line 
