Design the remaining html from format
Other two html still had no design so I added styles using the finished html's format

--- a/recipes/cornbread.html
+++ b/recipes/cornbread.html
@@ -4,36 +4,45 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Corn Bread Dressing</title>
+        <link rel="stylesheet" href="../style/recipes.css">
 </head>
 <body>
-        <p><a href="../index.html">Home</a></p>
-        <h1>Grandma's Cornbread Dressing</h1>
-        <img src="https://www.allrecipes.com/thmb/UgTS08qAV9o6rolvzwZB6daZlUk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/19547-grandmas-cornbread-dressing-mfs339-3a1dd6c037194b2eaa786b91e6694f73.jpg" alt="An Image ofr Corn Bread Dressing">
-        <h2>Description</h2>
-        <p>
-                Cornbread dressing is a classic Southern side dish made from crumbled cornbread mixed with sautéed onions, celery, herbs, and flavorful broth, 
-                then baked until moist on the inside and lightly crisp on top. Often served during holiday meals like Thanksgiving, 
-                it has a savory, comforting taste with a slightly sweet, rustic corn flavor. It’s hearty, aromatic, and pairs beautifully with roasted meats and gravy.
-        </p>
-        <h2>Ingredients</h2>
-        <ul>
-                <li>3 cups crumbled cornbread</li>
-                <li>2 tablespoons butter</li>
-                <li>1 small onion, diced</li>
-                <li>1/2 cup chopped celery</li>
-                <li>2 large eggs, beaten</li>
-                <li>2 cups chicken stock</li>
-                <li>1 tablespoon dried sage, or to taste</li>
-                <li>salt and ground black pepper to taste</li>
-        </ul>
-        <h2>Steps</h2>
-        <ol>
-                <li>Gather all ingredients.</li>
-                <li>Preheat the oven to 350 degrees F (175 degrees C). Grease a 7x11-inch baking dish. Place crumbled cornbread in a large bowl.</li>
-                <li>Melt butter in a large skillet over medium heat. Add onion and celery and sauté until soft, 5 to 7 minutes.</li>
-                <li>Add sautéed onion and celery to the crumbled cornbread. Stir in chicken stock, eggs, sage, salt, and pepper until well combined. Pour dressing into the prepared baking dish.</li>
-                <li>Bake in the preheated oven until dressing just starts to turn golden brown around the edges, about 30 minutes.</li>
-                <li>Serve and enjoy!</li>
-        </ol>
+        <div class="container">
+                <p><a href="../index.html">Home</a></p>
+                <div>
+                        <h1>Grandma's Cornbread Dressing</h1>
+                        <img src="https://www.allrecipes.com/thmb/UgTS08qAV9o6rolvzwZB6daZlUk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/19547-grandmas-cornbread-dressing-mfs339-3a1dd6c037194b2eaa786b91e6694f73.jpg" alt="An Image ofr Corn Bread Dressing">
+                        <h2>Description</h2>
+                        <p>
+                                Cornbread dressing is a classic Southern side dish made from crumbled cornbread mixed with sautéed onions, celery, herbs, and flavorful broth, 
+                                then baked until moist on the inside and lightly crisp on top. Often served during holiday meals like Thanksgiving, 
+                                it has a savory, comforting taste with a slightly sweet, rustic corn flavor. It’s hearty, aromatic, and pairs beautifully with roasted meats and gravy.
+                        </p>
+                </div>
+                <div>
+                        <h2>Ingredients</h2>
+                        <ul>
+                                <li>3 cups crumbled cornbread</li>
+                                <li>2 tablespoons butter</li>
+                                <li>1 small onion, diced</li>
+                                <li>1/2 cup chopped celery</li>
+                                <li>2 large eggs, beaten</li>
+                                <li>2 cups chicken stock</li>
+                                <li>1 tablespoon dried sage, or to taste</li>
+                                <li>salt and ground black pepper to taste</li>
+                        </ul>
+                </div>
+                <div>
+                        <h2>Steps</h2>
+                        <ol>
+                                <li>Gather all ingredients.</li>
+                                <li>Preheat the oven to 350 degrees F (175 degrees C). Grease a 7x11-inch baking dish. Place crumbled cornbread in a large bowl.</li>
+                                <li>Melt butter in a large skillet over medium heat. Add onion and celery and sauté until soft, 5 to 7 minutes.</li>
+                                <li>Add sautéed onion and celery to the crumbled cornbread. Stir in chicken stock, eggs, sage, salt, and pepper until well combined. Pour dressing into the prepared baking dish.</li>
+                                <li>Bake in the preheated oven until dressing just starts to turn golden brown around the edges, about 30 minutes.</li>
+                                <li>Serve and enjoy!</li>
+                        </ol>
+                </div>
+        </div>
 </body>
 </html>
