--- a/recipes/mashedpotato.html
+++ b/recipes/mashedpotato.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=   , initial-scale=1.0">
     <title>Chef John's Perfect Mashed Potatoes</title>
-    <link rel="stylesheet" href="../style/recipes.css"
+    <link rel="stylesheet" href="../style/recipes.css">
 </head>
 <body>
         <div class="container">
