--- a/recipes/sweetpotato.html
+++ b/recipes/sweetpotato.html
@@ -4,41 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sweet Potato Casserole with Marshmallows</title>
-    <link rel=""
+    <link rel="stylesheet" href="../style/recipes.css">
 </head>
 <body>
-            <p><a href="../index.html">Home</a></p>
-            <h1>Sweet Potato Casserole with Marshmallows</h1>
-            <img src="https://www.allrecipes.com/thmb/K1e-tN7W_LXwj5fDq_fDkdiZdBg=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-recipe-13478-sweet-potato-casserole-ii-hero-04-VAT-4x3-49aaf773eaf34dbeb9be808ad74d41eb.jpg" alt="Picture of sweet potato Cassero with Marshmallows">
-            <h2>Description</h2>
-            <p>
-                This sweet potato casserole with marshmallows toes the line 
-                between side dish and dessert — and we wouldn't have it any other way. 
-                Pureed sweet potatoes are blended with sugar and spices, then topped with 
-                marshmallows and baked to sweet, gooey perfection.
-            </p>
-            <h2>Ingredients</h2>
-            <ul>
-                    <li>Sweet Potatoes: You'll need about five sweet potatoes, peeled and sliced.</li>
-                    <li>Brown Sugar: Brown sugar is essential to the cozy, toasty, warmth we're after when we make sweet potato casserole. Use light for a milder flavor or dark for a more intense flavor.</li>
-                    <li>Butter: Use real butter for the best flavor and creamy texture. Margarine can be used if that's what you have on hand.</li>
-                    <li>Orange Juice: Three tablespoons of orange juice gives this sweet potato casserole subtle brightness.</li>
-                    <li>Cinnamon: Just a pinch of cinnamon adds warmth and brings out the other flavors.</li>
-                    <li>Marshmallows: Of course, you'll need a bag of miniature marshmallows (they'll be the star of the show, after all).</li>
-            </ul>
-            <h2>Steps</h2>
-            <ol>
-                    <li>
-                            Cook and mash the sweet potatoes: Place the peeled and cubed sweet potatoes in a saucepan and cover with water. Cook over medium-high heat until tender, then drain and mash with a potato masher.
-                    </li>
-                    <li>
-                            Mix and top the casserole: Use an electric mixer to mix the mashed (and cooled) sweet potatoes, brown sugar, margarine, cinnamon, and orange juice. Pour the mixture into a baking dish. Top with marshmallows.
-                    </li>
-                    <li>
-                            Bake the casserole: Bake in a preheated oven until the marshmallows are puffed and lightly browned, about half an hour.
-                    </li>
-            </ol>
+        <div class="container">
+                <p><a href="../index.html" class="home-btn">Home</a></p>
+                <div>
+                                <h1>Sweet Potato Casserole with Marshmallows</h1>
+                                <img src="https://www.allrecipes.com/thmb/K1e-tN7W_LXwj5fDq_fDkdiZdBg=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/ALR-recipe-13478-sweet-potato-casserole-ii-hero-04-VAT-4x3-49aaf773eaf34dbeb9be808ad74d41eb.jpg" alt="Picture of sweet potato Cassero with Marshmallows">
+                                <h2>Description</h2>
+                                <p>
+                                        This sweet potato casserole with marshmallows toes the line 
+                                        between side dish and dessert — and we wouldn't have it any other way. 
+                                        Pureed sweet potatoes are blended with sugar and spices, then topped with 
+                                        marshmallows and baked to sweet, gooey perfection.
+                                </p>
+                </div>
+                <div>
 
+                                <h2>Ingredients</h2>
+                                <ul>
+                                        <li>Sweet Potatoes: You'll need about five sweet potatoes, peeled and sliced.</li>
+                                        <li>Brown Sugar: Brown sugar is essential to the cozy, toasty, warmth we're after when we make sweet potato casserole. Use light for a milder flavor or dark for a more intense flavor.</li>
+                                        <li>Butter: Use real butter for the best flavor and creamy texture. Margarine can be used if that's what you have on hand.</li>
+                                        <li>Orange Juice: Three tablespoons of orange juice gives this sweet potato casserole subtle brightness.</li>
+                                        <li>Cinnamon: Just a pinch of cinnamon adds warmth and brings out the other flavors.</li>
+                                        <li>Marshmallows: Of course, you'll need a bag of miniature marshmallows (they'll be the star of the show, after all).</li>
+                                </ul>
+                </div>
+                <div>
+                                <h2>Steps</h2>
+                                <ol>
+                                        <li>
+                                                Cook and mash the sweet potatoes: Place the peeled and cubed sweet potatoes in a saucepan and cover with water. Cook over medium-high heat until tender, then drain and mash with a potato masher.
+                                        </li>
+                                        <li>
+                                                Mix and top the casserole: Use an electric mixer to mix the mashed (and cooled) sweet potatoes, brown sugar, margarine, cinnamon, and orange juice. Pour the mixture into a baking dish. Top with marshmallows.
+                                        </li>
+                                        <li>
+                                                Bake the casserole: Bake in a preheated oven until the marshmallows are puffed and lightly browned, about half an hour.
+                                        </li>
+                                </ol>
+                </div>
+        </div>
 
     
 </body>
